<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trail Tracker</string>
    <string name="main_title"><u>My Locations</u></string>
    <string name="empty">There are no saved trails.\n Click the plus sign in the Action Bar\n to record a new trail.</string>
    <string name="not_unique">That name has already been used.\nEither try a new name or cancel.</string>
    <string name="delete">Delete This Trail?</string>
    <string name="edit_name">Edit This Name?</string>
    <string name="stats">Stats</string>
    <string name="name_prompt_default">Name This Trail</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start Hike</string>
    <string name="save_name">Save Name</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="action_search">Search</string>
    <string name="action_new">Start New Trail</string>
    <string name="action_edit">Edit Names</string>
    <string name="action_camera">Add a Photo</string>
    <string name="action_save">Save Trail</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="accuracy">Accuracy</string>
    <string name="accuracy_description">Adjust the frequency of location updates, less frequent = better battery life. </string>
    <string name="getGooglePlay">To get the most out of this app and prevent crashes, get GooglePlay Services before continuing.</string>
    <string name="help_text">For best battery, decrease the accuracy. This app will record and plot a route on a map. From the initial screen, choose the plus sign to start recording a trail. While recording, click the camera icon to tag a photo to your current location and to the trail. To finish recording, click the save icon. To review previous hikes, choose from the list in the main screen.</string>
    <string name="about_text">Version 1.0\nAuthors: Thomas Powell and Mike Patterson\nMobile Device Programming Project 3\nFall 2013\nGithub Repository @: https://github.com/mpatt3970/Trail-Tracker</string>
    <string name="map_type">Type of Map</string>
    <string name="map_type_description">Choose the appearance of the map. Update is not instant.</string>

</resources>