<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/action_camera"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never"/>

</menu>
